--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,32 @@
 	<groupId>org.jsweet</groupId>
 	<artifactId>jsweet-angular2-quickstart</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+  <repositories>
+    <repository>
+      <id>jsweet-central</id>
+      <name>libs-release</name>
+      <url>http://repository.jsweet.org/artifactory/libs-release-local</url>
+    </repository>
+    <repository>
+      <snapshots />
+      <id>jsweet-snapshots</id>
+      <name>libs-snapshot</name>
+      <url>http://repository.jsweet.org/artifactory/libs-snapshot-local</url>
+    </repository>
+  </repositories>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>jsweet-plugins-release</id>
+      <name>plugins-release</name>
+      <url>http://repository.jsweet.org/artifactory/plugins-release-local</url>
+    </pluginRepository>
+    <pluginRepository>
+      <snapshots />
+      <id>jsweet-plugins-snapshots</id>
+      <name>plugins-snapshot</name>
+      <url>http://repository.jsweet.org/artifactory/plugins-snapshot-local</url>
+    </pluginRepository>
+  </pluginRepositories>
 	<build>
 		<plugins>
 			<plugin>
@@ -40,7 +66,7 @@
 		</plugins>
 		<pluginManagement>
 			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings 
+				<!--This plugin's configuration is used to store Eclipse m2e settings
 					only. It has no influence on the Maven build itself. -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
